--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -309,14 +309,14 @@ body {
           display: flex;
           align-items: center;
           justify-content: center;
-          font-size: 1.2vw;
+          font-size: 0.8vw;
           color: black; }
           #single-room__wrap .full-height .right-col #single-room__clock-wrap #single-room__device-status span {
             display: inline-flex;
             align-items: center;
-            margin: 0 8px; }
+            margin: 0 6px; }
             #single-room__wrap .full-height .right-col #single-room__clock-wrap #single-room__device-status span svg {
-              margin-right: 4px; }
+              margin-right: 3px; }
       #single-room__wrap .full-height .right-col #upcoming-title {
         font-size: 2.5vw;
         text-transform: uppercase;
